Validation model added

--- a/GligorCoreProject.Web/Views/LeaveTypes/Index.cshtml
+++ b/GligorCoreProject.Web/Views/LeaveTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GligorCoreProject.Web.Data.LeaveType>
+﻿@model IEnumerable<LeaveTypeReadOnlyVM>
 
 @{
     ViewData["Title"] = "Index";
