--- a/GligorCoreProject.Web/Views/_ViewImports.cshtml
+++ b/GligorCoreProject.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GligorCoreProject.Web
 @using GligorCoreProject.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using GligorCoreProject.Web.Models.LeaveTypes
