Implementing a service layer

--- a/GligorCoreProject.Web/Views/LeaveTypes/Index.cshtml
+++ b/GligorCoreProject.Web/Views/LeaveTypes/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<LeaveTypeReadOnlyVM>
+﻿@model IEnumerable<GligorCoreProject.Web.Models.LeaveTypes.LeaveTypeReadOnlyVM>
+
 
 @{
     ViewData["Title"] = "Index";
